fix global collapse styles

--- a/src/shared/styles/globals.scss
+++ b/src/shared/styles/globals.scss
@@ -42,11 +42,11 @@ body {
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  transition: .3s ease-in !important;
+  transition: .3s ease-in;
 
   svg {
-    width: 17px;
-    height: 17px;
+    width: 1rem;
+    height: 1rem;
   }
 
   @include on768 {
@@ -54,8 +54,8 @@ body {
     height: 3.5rem;
 
     svg {
-      width: 23px;
-      height: 23px;
+      width: 1.5rem;
+      height: 1.5rem;
     }
   }
 }
@@ -65,7 +65,7 @@ body {
 
   svg {
     path {
-      transition: .3s ease-in !important;
+      transition: .3s ease-in;
       fill: $rgbWhite;
     }
   }
